# Curtains-Image-Generation

./: .env  .env.example  .gitignore  CLAUDE.md  app.py  main.py  pyproject.toml  requirements.txt
static/css/: style.css
static/js/: main.js
templates/: index.html
